--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -25,8 +25,9 @@
     line-height: 3rem;
     color: #333333;
     margin-bottom: 4rem;
-    span {
+    span a {
       color: #286efa;
+      text-decoration: none;
     }
   }
 }
